# monzo-lib

./: .clippy.toml  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  README.tpl  deny.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  ci.yml  coverage.yml  release.yml
examples/: auto_refresh.rs  enum.rs  get_balance.rs  list_accounts.rs  list_pots.rs  list_transactions.rs  refresh_auth.rs  who_am_i.rs
src/: client.rs  endpoints.rs  error.rs  into_future.rs  lib.rs  request_builder.rs
src/client/: accounts.rs  balance.rs  inner.rs  monzo_client.rs  pots.rs  quick.rs  quick_client.rs  refreshable.rs  refreshable_client.rs  request.rs
src/client/inner/: quick.rs  refreshable.rs
src/endpoints/: accounts.rs  auth.rs  balance.rs  feed_items.rs  pots.rs  transactions.rs  utils.rs  who_am_i.rs
src/endpoints/feed_items/: basic.rs
src/endpoints/pots/: deposit.rs  list.rs  withdraw.rs
src/endpoints/transactions/: get.rs  list.rs  retrieve.rs
