[package]
name = "monzo-lib"
version = "0.4.4"
authors = ["Daniel Eades <danieleades@hotmail.com>"]
edition = "2021"
description = "async Monzo client in pure rust."
readme = "README.md"
keywords = ["monzo", "mondo", "async", "client"]
categories = ["api-bindings", "asynchronous"]
homepage = "https://github.com/danieleades/monzo-lib"
repository = "https://github.com/danieleades/monzo-lib"
license = "Apache-2.0"
rust-version = "1.70.0"

[lib]
name = "monzo"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
rand = "0.8.4"
serde_json = "1.0.119"
erased-serde = "0.4.5"
thiserror = "1.0.61"
tracing = "0.1.29"

[dev-dependencies]
clap = { version = "4.4.18", features = ["derive", "env"] }
doc-comment = "0.3.3"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.29"
