[package]
name = "monzo-lib"
version = "0.4.5"
authors = ["Daniel Eades <danieleades@hotmail.com>"]
edition = "2021"
description = "async Monzo client in pure rust."
readme = "README.md"
keywords = ["monzo", "mondo", "async", "client"]
categories = ["api-bindings", "asynchronous"]
homepage = "https://github.com/danieleades/monzo-lib"
repository = "https://github.com/danieleades/monzo-lib"
license = "Apache-2.0"
rust-version = "1.75.0"

[lib]
name = "monzo"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
rand = "0.8.4"
serde_json = "1.0.135"
erased-serde = "0.4.5"
thiserror = "2.0.10"
tracing = "0.1.41"

[dev-dependencies]
clap = { version = "4.5.26", features = ["derive", "env"] }
doc-comment = "0.3.3"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
