[package]
name = "monzo-lib"
version = "0.4.6"
authors = ["Daniel Eades <danieleades@hotmail.com>"]
edition = "2021"
description = "async Monzo client in pure rust."
readme = "README.md"
keywords = ["monzo", "mondo", "async", "client"]
categories = ["api-bindings", "asynchronous"]
homepage = "https://github.com/danieleades/monzo-lib"
repository = "https://github.com/danieleades/monzo-lib"
license = "Apache-2.0"
rust-version = "1.81.0"

[lib]
name = "monzo"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
erased-serde = "0.4.9"
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.43"

[dev-dependencies]
clap = { version = "4.5.53", features = ["derive", "env"] }
doc-comment = "0.3.4"
test-case = "3.3.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.43"
